HW20-490 - Become a Media Partner: related resources box name should be correctly aligned

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -899,6 +899,13 @@ ul.time-and-counters li .counter-label {
   padding-left: 1em;
   word-break: break-word;
 }
+.page-node-184 .recommended-tool span {
+  display: block;
+  width: 100%;
+  padding-left: 1em;
+  word-break: break-word;
+  text-align: left;
+}
 .container-recommended-tools {
   padding: 0;
   margin: 0;
