--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -1021,6 +1021,18 @@ ul.time-and-counters{
 	}
 }
 
+.page-node-184{
+	.recommended-tool{
+	  	span{
+		    display: block;
+		   	width: 100%;
+			padding-left: 1em;
+			word-break: break-word;
+			text-align: left;
+		}
+	}
+}
+
 .container-recommended-tools{
 	padding: 0;
 	margin: 0;
